atualização do dia 08 de setembro

--- a/projeto.css
+++ b/projeto.css
@@ -1,15 +1,17 @@
 h1{ 
     font-size: 78px;
     text-align:center;
-    color: #9370DB;
+    color: #B22222;
 }
 
 
 #capa {
-   height: 5%;
-   width: 98%;
-   padding: 10px;
-
-
-
+   height: 999px;
+   width: 2000px;
 }
+
+
+
+
+
+
